# gyo_xj0_autonom

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
gyo_xj0_autonom/: atlag_ossz.py  atlagolo.py  atlagolo_minusz.py  generator.cpp  generator.py  generator_minusz.py
kis_beadando/: CMakeLists.txt
kis_beadando/kis_beadando/: generator_minusz.cpp
kis_beadando/launch/: indito.py
launch/: indito.py  launch_example1.launch.py
resource/: gyo_xj0_autonom
src/: atlag_ossz.cpp  atlagolo.cpp  atlagolo_minusz.cpp  eredmeny.cpp  fuggveny.cpp  generator.cpp  generator_minusz.cpp
